--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -47,3 +47,69 @@ textarea {
   color: red;
   cursor: pointer;
 }
+
+
+/* APP */
+.main-title {
+  padding: 0.5em;
+  color: #1eaedb;
+  margin: 0;
+  text-decoration-line: underline;
+  text-decoration-style: dotted;
+}
+
+.cards {
+  display: grid;
+  margin: 1.5em 3em;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-auto-rows: 150px;
+  grid-auto-flow: row dense;
+  grid-gap: 2em;
+  grid-auto-rows: 300px;
+}
+
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  box-shadow: -3px 3px 10px 0px rgba(168, 168, 168, 0.4);
+  text-align: center;
+  background: #ddd;
+  transition: all 0.3s;
+}
+
+.card:hover {
+  transform: scale(1.05);
+}
+
+.card:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  opacity: 0.25;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.card:hover:after {
+  opacity: 0;
+}
+
+.card-text {
+  position: relative;
+  z-index: 1;
+  color: rgb(39, 37, 37);
+  background: whitesmoke;
+  letter-spacing: 1px;
+}
+
+.card-text a {
+  text-decoration: none;
+}
+
+.card-text h4 {
+  margin: 0;
+  padding: 0.2em;
+}
